<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/delay_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delay_message"
        android:gravity="center"
        android:paddingTop="40dp"/>
    
    <SeekBar
        android:id="@+id/delay_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <TextView
        android:id="@+id/delay_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp" />

    <TextView
        android:id="@+id/duration_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duration_message"
        android:paddingTop="40dp"
        android:gravity="center" />
    
    <SeekBar
        android:id="@+id/duration_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp" />

    <TextView
        android:id="@+id/duration_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:gravity="center" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok_button"
        android:layout_marginTop="50dp" />
    
</LinearLayout>
